# shine

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci_build_linux.yml
cmake/: FindLLVM.cmake  PVS-Studio.cmake
docs/: TODO.md  shine.ebnf
include/shine/: types.hpp
include/shine/ast/: ast.hpp  astTypes.hpp  parser.hpp  visitor.hpp
include/shine/lexer/: lexer.hpp  token.hpp
include/shine/utils/: exception.hpp  position.hpp  utils.hpp
libast/: CMakeLists.txt  exception.cpp  parser.cpp
liblexer/: CMakeLists.txt  exception.cpp  lexer.cpp  token.cpp
libutils/: CMakeLists.txt  exception.cpp  utils.cpp
samples/: array.shine  conditional_branch.shine  functions.shine  helloworld.shine  loops.shine  raw_pointer.shine
src/: shine.cpp  shine.hpp  types.hpp
src/ast/: ast.hpp  parser.cpp  parser.hpp  visitor.cpp  visitor.hpp
src/lexer/: lexer.cpp  lexer.hpp  position.hpp  token.cpp  token.hpp
src/llvm-codegen/: codegen.cpp  codegen.hpp
src/llvm-codegen/internal/: codegen.cpp  codegen.hpp  createOperation.cpp  typeInfo.hpp
src/utils/: exception.cpp  exception.hpp  prettyprint.cpp  prettyprint.hpp  stack.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt
tests/ast/: CMakeLists.txt  pch.h  test_arrays.cpp  test_ast.cpp  test_branches.cpp  test_comments.cpp  test_lexer.cpp  test_loops.cpp
